# Vulkan-first-hexagon

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.zed/: settings.json  tasks.json
include/: application.h  triangleGenerator.h  vulkan_core.h
shaders/: shader.frag  shader.vert
src/: CMakeLists.txt  application.cpp  commands.cpp  graphics.cpp  main.cpp  swapchain.cpp  triangleGenerator.cpp  vulkan_core.cpp  window.cpp
tests/: CMakeLists.txt  test_main.cpp
